chore: try to fix data storage

--- a/index.html
+++ b/index.html
@@ -361,69 +361,31 @@
 </div>
 
 <script>
-// Functions for URL-safe Base64 encoding/decoding with Unicode support
-function base64UrlEncode(str) {
-  const encoder = new TextEncoder();
-  const bytes = encoder.encode(str);
-  let binary = '';
-  bytes.forEach((b) => binary += String.fromCharCode(b));
-  return btoa(binary)
-    .replace(/\+/g, '-')
-    .replace(/\//g, '_')
-    .replace(/=+$/, '');
-}
-
-function base64UrlDecode(str) {
-  str = str
-    .replace(/-/g, '+')
-    .replace(/_/g, '/');
-  // Pad with '=' to make the length a multiple of 4
-  while (str.length % 4) {
-    str += '=';
-  }
-  const binary = atob(str);
-  const bytes = new Uint8Array(binary.length);
-  for (let i = 0; i < binary.length; i++) {
-    bytes[i] = binary.charCodeAt(i);
-  }
-  const decoder = new TextDecoder();
-  return decoder.decode(bytes);
-}
-
-// Function to update the URL with the current state
+// Function to update the URL with the current state using individual query parameters
 function updateURL() {
-  const state = {
-    Body: document.getElementById('Body-hue').value,
-    Hands: document.getElementById('Hands-hue').value,
-    Legs: document.getElementById('Legs-hue').value,
-    Plates: document.getElementById('Plates-hue').value
-  };
-  const stateString = JSON.stringify(state);
-  const encodedState = base64UrlEncode(stateString);
-  const newURL = window.location.origin + window.location.pathname + '?state=' + encodeURIComponent(encodedState);
+  const params = new URLSearchParams(window.location.search);
+  params.set('Body', document.getElementById('Body-hue').value);
+  params.set('Hands', document.getElementById('Hands-hue').value);
+  params.set('Legs', document.getElementById('Legs-hue').value);
+  params.set('Plates', document.getElementById('Plates-hue').value);
+  const newURL = `${window.location.origin}${window.location.pathname}?${params.toString()}`;
   window.history.replaceState(null, '', newURL);
 }
 
 // Function to load the state from the URL
 function loadStateFromURL() {
   const params = new URLSearchParams(window.location.search);
-  const encodedState = params.get('state');
-  if (encodedState) {
-    try {
-      const stateString = base64UrlDecode(decodeURIComponent(encodedState));
-      const state = JSON.parse(stateString);
-      // Apply hue values to each layer
-      ['Body', 'Hands', 'Legs', 'Plates'].forEach(layer => {
-        if (state[layer] !== undefined && state[layer] >= 0 && state[layer] <= 360) {
-          document.getElementById(`${layer}-hue`).value = state[layer];
-          document.getElementById(`${layer}-hue-value`).value = state[layer];
-          document.getElementById(layer).style.filter = `hue-rotate(${state[layer]}deg)`;
-        }
-      });
-    } catch (e) {
-      console.error('Failed to load state from URL:', e);
+  ['Body', 'Hands', 'Legs', 'Plates'].forEach(layer => {
+    const value = params.get(layer);
+    if (value !== null) {
+      const hueValue = parseInt(value, 10);
+      if (!isNaN(hueValue) && hueValue >= 0 && hueValue <= 360) {
+        document.getElementById(`${layer}-hue`).value = hueValue;
+        document.getElementById(`${layer}-hue-value`).value = hueValue;
+        document.getElementById(layer).style.filter = `hue-rotate(${hueValue}deg)`;
+      }
     }
-  }
+  });
 }
 
 // Function to save settings to localStorage
